fix band_photo whitespace

--- a/app/assets/stylesheets/partials/users.scss
+++ b/app/assets/stylesheets/partials/users.scss
@@ -172,6 +172,24 @@
   margin-top: 5px;
 }
 
+.bp-slider-box {
+  white-space: nowrap;
+  height: 400px;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+.bp_pics {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 360px;
+  height: 360px;
+  border-radius: 10px;
+  object-fit: cover;  
+}
+
+
 .memRQ {
   animation: blink 2s ease infinite alternate;
   margin-left: 20px;
@@ -186,4 +204,50 @@
   50% {
     opacity: 0;
   }
+}
+
+@media (max-width: 720px) {
+  
+  .bp-slider-box {
+    white-space: nowrap;
+    height: 350px;
+    overflow-y: auto;
+    overflow-x: auto;
+  }
+
+  
+  .bp_pics {
+    margin-left: -10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    object-fit: cover;  
+  }  
+  
+}
+
+@media (max-width: 360px) {
+  
+  .bp-slider-box {
+    white-space: nowrap;
+    height: 280px;
+    overflow-y: auto;
+    overflow-x: auto;
+  }
+
+  
+  .bp_pics {
+    margin-left: -45px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    object-fit: cover;  
+  }  
+  
 }
